<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:weightSum="3">

    <ImageView
        android:id="@+id/imageViewThumbnailEpisode"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/thumbnail_of_episode"
        app:srcCompat="@android:drawable/presence_video_busy" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewEpisodeOverviewItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewEpisodeOverviewItemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_date"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>